changing names of files

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,8 @@
 @import "partials/colors";
 @import "partials/typography";
 
-@import "partials/base";
-@import "partials/header";
-@import "partials/schedule";
-@import "partials/filter";
+@import "base";
+
+@import "layout/header";
+@import "layout/nav";
+@import "layout/schedule";
