--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -1,5 +1,12 @@
 /* === COLORS === */
 
-$cell_secondary: #909090;
-$secondary_bkg: #F2F3F4;
+$content: #10132E;
+$label: #626475;
 $borders: #CACDD6;
+$secondary_bkg: #F2F3F4;
+$card_bkg: #ffffff;
+$app_header: #1F2555;
+$app_bkg: #E8EAEF;
+$interactive_items: #295ED9;
+
+$cell_secondary: #909090;
