--- a/scss/layout/_schedule.scss
+++ b/scss/layout/_schedule.scss
@@ -1,25 +1,35 @@
 /* === SCHEDULE === */
+@media(min-width: 280px) {
 
 .schedule {
   border-spacing:0;
+  width: 100%;
+}
+tr.hidden {
+  height: 0;
+}
+thead {
+  display: none;
 }
 .schedule__cell {
-  padding: 14px 14px 10px;
-  border-bottom: 1px solid #f3f0f0;
+  border-bottom: 1px solid $borders;
   font-weight: 500;
+  &:nth-child(even) {padding: 14px 14px 10px 7px;}
+  &:nth-child(odd) {padding: 14px 14px 10px;}
+  &:nth-child(3) {border-left: 1px solid $borders;}
   &.time {
     font-weight: 500;
     span {
-      font-size: .7em;
+      font-size: 11px;
       font-weight: 300;
-      color: $cell_secondary;
+      color: $label;
       text-transform: uppercase;
     } 
   }
   .cell__loc {
-    font-size: .9em;
+    font-size: 13px;
     font-weight: 300;
-    color: $cell_secondary;
+    color: $label;
   }
   .cell__cat {
     margin-top: 14px;
@@ -29,12 +39,32 @@
     display: inline-block;
     font-size: 12px;
   
-    &.customer {border: 1px solid #4CAF50; background: #4CAF50;}
-    &.break-meals{border: 1px solid #9e9e9e; background: #9e9e9e;}
-    &.travel-registration {border: 1px solid blueviolet; background: blueviolet;}
-    &.pegaworld {border: 1px solid #2196f3; background: #2196f3;}
-    &.mobile {border: 1px solid #ff9800; background: #ff9800;}
-    &.ucd {border: 1px solid #ff4383; background: #ff4383;}
+    &.customer {border: 1px solid #20AA50; background: #20AA50;}
+    &.break-meals{border: 1px solid #585B73; background: #585B73;}
+    &.travel-registration {border: 1px solid #FD6000; background: #FD6000;}
+    &.pegaworld {border: 1px solid #295ED9; background: #295ED9;}
+    &.mobile {border: 1px solid #FEB53A; background: #FEB53A;}
+    &.user-centered-design {border: 1px solid #E10B81; background: #E10B81;}
   }
 
+}
+}
+
+@media(min-width: 1190px) {
+  .timeline {
+    display: flex;
+  }
+  .day {
+    border-right: 1px solid $borders;
+  }
+  thead {
+    display: table-header-group;
+  }
+  thead th {
+    text-transform: uppercase;
+    border-bottom: 2px solid $borders;
+    padding: 14px 0;
+    background-color: $app_bkg;
+  }
+  .days {display: none;}
 }
