--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -1,9 +1,8 @@
 /* === TYPOGRAPHY === */
 
-body {font-size: 16px; font-family: 'Open Sans', sans-serif;}
-
-@media(min-width: 300px) {
-  body {font-size: 14px}
-  h1 {font-size: 24px; }
-  h3 {font-weight: 300;}
+@media(min-width: 280px) {
+  body {font-size: 14px; color:$content; font-family: 'Open Sans', sans-serif;}
+  h1 {font-size: 19px; }
+  h2 {font-size: 17px;}
+  h3 {font-size: 15.5px; font-weight: 300;}
 }
